--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <header>
         <h1>Certigma</h1>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="courses.html">Courses</a>
-            <a href="demo-course-1.html">Demo Course</a>
-            <a href="evaluation.html">Evaluation</a>
+               <a href="index.html">Home</a>
+               <a href="courses.html">Courses</a>
+               <a href="demo-course-1.html">Demo Course</a>
+               <a href="evaluation.html">Evaluation</a>
+               <a href="quiz.html">Quiz</a>
+               <a href="dashboard.html">Dashboard</a>
         </nav>
     </header>
 
