--- a/demo-course-1.html
+++ b/demo-course-1.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Demo Course 1 - Certigma</title>
+    <title>Curso de Demostración 1 - Certigma</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Demo Course 1: Introduction to Web Development</h1>
+        <h1>Curso de Demostración 1: Introducción al Desarrollo Web</h1>
         <nav>
-               <a href="index.html">Home</a>
-               <a href="courses.html">Courses</a>
-               <a href="demo-course-1.html">Demo Course</a>
-               <a href="evaluation.html">Evaluation</a>
-               <a href="quiz.html">Quiz</a>
-               <a href="dashboard.html">Dashboard</a>
+            <a href="index.html">Inicio</a>
+            <a href="courses.html">Cursos</a>
+            <a href="demo-course-1.html">Curso de demostración</a>
+            <a href="evaluation.html">Evaluación</a>
+            <a href="quiz.html">Quiz</a>
+            <a href="dashboard.html">Dashboard</a>
         </nav>
     </header>
 
     <main>
-        <h2>Course Content</h2>
-        <p>Welcome to this introductory course on web development. In this module, you will learn the basics of HTML, CSS, and JavaScript. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <p>Key topics include:</p>
+        <h2>Contenido del Curso</h2>
+        <p>Bienvenido a este curso introductorio sobre desarrollo web. En este módulo, aprenderás los fundamentos de HTML, CSS y JavaScript. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <p>Los temas clave incluyen:</p>
         <ul>
-            <li>Structuring a web page with HTML</li>
-            <li>Styling with CSS</li>
-            <li>Adding interactivity with JavaScript</li>
+            <li>Estructurar una página web con HTML</li>
+            <li>Estilizar con CSS</li>
+            <li>Agregar interactividad con JavaScript</li>
         </ul>
     </main>
 
     <footer>
-        <p>&copy; 2025 Certigma. All rights reserved.</p>
+        <p>&copy; 2025 Certigma. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
